--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,6 +28,7 @@
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.3/dist/purify.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script type="module" src="/static/js/main.js"></script>
 </body>
