--- a/app/templates/splash.html
+++ b/app/templates/splash.html
@@ -44,5 +44,6 @@
       </div>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.3/dist/purify.min.js"></script>
 </body>
 </html>
