--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,9 +16,16 @@
         <div id="menu-dropdown" class="menu-dropdown" role="menu" aria-hidden="true">
           <button class="menu-item" data-action="new-chat" role="menuitem">New Chat</button>
           <button class="menu-item" data-action="edit-persona" role="menuitem">Persona…</button>
+          <button class="menu-item" data-action="settings" role="menuitem">Settings…</button>
         </div>
       </div>
       <div class="fill"></div>
+      <div class="menu user-menu">
+        <button id="user-menu-trigger" class="menu-trigger" aria-haspopup="true" aria-expanded="false">User ▾</button>
+        <div id="user-menu-dropdown" class="menu-dropdown" role="menu" aria-hidden="true">
+          <button class="menu-item" data-action="logout" role="menuitem">Log Out</button>
+        </div>
+      </div>
     </div>
 
     <div class="columns" id="columns">
